Bug 162542 - FILEOPEN DOC NOT-layoutInCell: horizontal char-placement w/ wrapthrough should not be page-oriented
Summary: FILEOPEN DOC NOT-layoutInCell: horizontal char-placement w/ wrapthrough shoul...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:25.2.0
Keywords: filter:doc
Depends on: 162551
Blocks: DOC-Anchor-and-Text-Wrap layoutInCell
  Show dependency treegraph
 
Reported: 2024-08-21 17:14 UTC by Justin L
Modified: 2024-08-24 19:40 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
notLayoutInCell_char_left_wrapThrough.doc: image stays in cell B2 (71.00 KB, application/msword)
2024-08-21 17:14 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2024-08-21 17:14:37 UTC
Created attachment 195933 [details]
notLayoutInCell_char_left_wrapThrough.doc: image stays in cell B2

I have no idea why a character oriented image should be changed to page-orientation simply because it is wrap-through.

commit 4372b0357cab4f0ed952f1132a508bb0cb87521a
Author: Vladimir Glazounov on Wed Feb 16 16:02:17 2005 +0000
    #118546# conversion of horizontal position under certain condition
Comment 1 Justin L 2024-08-22 13:16:56 UTC
This should be solved by bug 162551 forcing on layoutInCell.
Comment 2 Commit Notification 2024-08-24 12:32:12 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/77bbf007cd9db81c141bb123b83aac72c13a436f

tdf#162542 doc import NOT-layoutInCell: do not change char into margin

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.