tdf#162542 doc import NOT-layoutInCell: do not change char into margin

It was simply wrong to equate an char-orientation
with a page margin orientation.

make CppunitTest_sw_ww8export4 CPPUNIT_TEST_NAME=testTdf162542

Change-Id: I08f1449bfbb8e24311bc77e164d3fa57f25ee35f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172217
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins